--- a/package.xml.dist
+++ b/package.xml.dist
@@ -10,11 +10,10 @@
   <email>john@coswellproductions.com</email>
   <active>yes</active>
  </lead>
- <date>{date}</date>
- <time>{time}</time>
+ <date>@date@</date>
  <version>
-  <release>0.1.{datetime}</release>
-  <api>0.1.{datetime}</api>
+  <release>0.1.0</release>
+  <api>0.1.0</api>
  </version>
  <stability>
   <release>alpha</release>
@@ -51,14 +50,14 @@ Built from http://github.com/johnbintz/mockpress
  <changelog>
   <release>
    <version>
-    <release>0.1.{datetime}</release>
-    <api>0.1.{datetime}</api>
+    <release>0.1.0</release>
+    <api>0.1.0</api>
    </version>
    <stability>
     <release>alpha</release>
     <api>alpha</api>
    </stability>
-   <date>{date}</date>
+   <date>@date@</date>
    <license uri="http://www.gnu.org/licenses/lgpl.html">LGPL</license>
    <notes>
 Built from http://github.com/johnbintz/mockpress
