--- a/package.xml.dist
+++ b/package.xml.dist
@@ -29,10 +29,12 @@ Built from http://github.com/johnbintz/mockpress
    <file name="README" role="data" />
    <dir name="includes">
      <file name="cache.php" role="php" />
-     <file name="media.php" role="php" />
-     <file name="filtering.php" role="php" />
-     <file name="posts.php" role="php" />
      <file name="comments.php" role="php" />
+     <file name="filtering.php" role="php" />
+     <file name="http.php" role="php" />
+     <file name="media.php" role="php" />
+     <file name="pluggable.php" role="php" />
+     <file name="posts.php" role="php" />
    </dir>
   </dir>
  </contents>
